--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="h-container">
 
         <div class="h-image">
-            <img src="img/profile.jpg" width="200" alt="Abdalsamie Ali">
+            <img src="img/profile2.jpg" width="200" alt="Abdalsamie Ali">
         </div>
 
         <div class="profile">
