adding new posts and fixing some issuos

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <ul class="posts">
             
             <li>
+                <a class="title" href="posts/no2.html">Dynamic Models</a>
+                <br>
+                <span class="date">2026-01-11</span>
+                <br>
+                <p class="content">What is the first step in analyzing and designing controls for a system? Developing a mathematical model of the system to be controlled.</p>
+            </li>
+            
+            <li>
                 <a class="title" href="posts/no1.html">Feedback Control</a>
                 <br>
                 <span class="date">2025-12-15</span>
