--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <ul class="posts">
             
             <li>
+                <a class="title" href="posts/no3.html">Openloop Control</a>
+                <br>
+                <span class="date">2026-01-19</span>
+                <br>
+                <p class="content">Fundamentally, there are two types of control loop: open-loop control (feedforward), and closed-loop control (feedback).<br><h4>Open loop System: </h4> <br> An open-loop control system is a type of control system where the control action is independent of the output of the system, meaning there is no feedback path...</p>
+            </li>
+            
+            <li>
                 <a class="title" href="posts/no2.html">Dynamic Models</a>
                 <br>
                 <span class="date">2026-01-11</span>
