--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <ul class="posts">
             
             <li>
+                <a class="title" href="posts/no4.html">IEC Standards</a>
+                <br>
+                <span class="date">2026-01-27</span>
+                <br>
+                <p class="content">Are international guideline developed by the international electoral technical commission for electrical ,electronic, and related technologies. the ensure safety, efficiency, and intro probability of devices and system across various industries.<br><br> <h4>The International Electrotechnical Commission (IEC):</h4>...</p>
+            </li>
+            
+            <li>
                 <a class="title" href="posts/no3.html">Openloop Control</a>
                 <br>
                 <span class="date">2026-01-19</span>
