--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <ul class="posts">
             
             <li>
+                <a class="title" href="posts/no5.html">Control Panel Design</a>
+                <br>
+                <span class="date">2026-02-02</span>
+                <br>
+                <p class="content">Designing a control panel that meets  IEC 60204-1 standards isn't just about following rules; it's about ensuring safety and longevity. A professional design balances regulatory requirements with real-world accessibility.<br><br>Here are the core components every robust industrial control panel...</p>
+            </li>
+            
+            <li>
                 <a class="title" href="posts/no4.html">IEC Standards</a>
                 <br>
                 <span class="date">2026-01-27</span>
